# PlugRelay

./: .gitignore  LICENSE  README.md  package.json
.github/ISSUE_TEMPLATE/: plugin-compatibility.yml
.github/workflows/: ci.yml
docs/: architecture.md  compatibility-reports.md  daw-integration.md  file-grant-approval-broker.md  native-editor-broker.md  open-standard.md  protocol-file-grants.md  protocol.md  release-readiness.md  roadmap.md  security-review.md  security.md
examples/browser-demo/: index.html  package.json
examples/browser-demo/src/: app.js  bridge-monitor-events.js  realtime-stats.js  styles.css
installer/macos/: README.md
native/bridge-daemon/: CMakeLists.txt  README.md
native/bridge-daemon/include/PlugRelay/: AudioUnitHostWorker.h  AudioUnitHostWorkerSupport.h  AudioUnitHostedEffect.h  AudioUnitScanner.h  Base64.h  ExampleInstrumentRenderer.h  Lv2Abi.h  Lv2AtomSupport.h  Lv2BusSupport.h  Lv2HostWorker.h  Lv2HostWorkerSupport.h  Lv2HostedPlugin.h  Lv2HostedPluginStateSupport.h  Lv2Scanner.h  Lv2StateSupport.h  Lv2TurtleMetadataSupport.h  Lv2WorkerSupport.h  NativeAudioJson.h  NativeFileGrantSupport.h  NativePlugin.h  PluginCatalog.h  Vst3Host.h  Vst3HostInfoSupport.h  Vst3HostWorker.h  Vst3HostWorkerProcessSupport.h  Vst3HostWorkerSupport.h  Vst3HostedEffect.h  Vst3Scanner.h  Vst3StateSupport.h  Vst3StreamSupport.h
native/bridge-daemon/include/SoundBridge/: AudioUnitHostWorker.h  AudioUnitHostWorkerSupport.h  AudioUnitHostedEffect.h  AudioUnitScanner.h  Base64.h  ExampleInstrumentRenderer.h  Lv2Abi.h  Lv2AtomSupport.h  Lv2BusSupport.h  Lv2HostWorkerSupport.h  Lv2HostedPlugin.h  Lv2Scanner.h  Lv2StateSupport.h  Lv2TurtleMetadataSupport.h  Lv2WorkerSupport.h  NativeFileGrantSupport.h  NativePlugin.h  PluginCatalog.h  Vst3Host.h  Vst3HostInfoSupport.h  Vst3HostWorker.h  Vst3HostWorkerProcessSupport.h  Vst3HostWorkerSupport.h  Vst3HostedEffect.h  Vst3Scanner.h  Vst3StateSupport.h  Vst3StreamSupport.h
native/bridge-daemon/src/: AudioUnitHostWorker.cpp  AudioUnitHostWorkerSupport.cpp  AudioUnitHostedEffect.cpp  AudioUnitScanner.cpp  Base64.cpp  ExampleInstrumentBundleMain.cpp  ExampleInstrumentRenderer.cpp  ExampleLv2GainPlugin.cpp  Lv2AtomSupport.cpp  Lv2BusSupport.cpp  Lv2HostWorker.cpp  Lv2HostWorkerSupport.cpp  Lv2HostedPlugin.cpp  Lv2HostedPluginStateSupport.cpp  Lv2MetadataSupport.cpp  Lv2ParameterSupport.cpp  Lv2Scanner.cpp  Lv2StateSupport.cpp  Lv2TurtleMetadataSupport.cpp  Lv2WorkerSupport.cpp  NativeAudioJson.cpp  NativeFileGrantSupport.cpp  NativePlugin.cpp  PluginCatalog.cpp  Vst3BusLayoutSupport.cpp  Vst3Host.cpp  Vst3HostInfoSupport.cpp  Vst3HostWorker.cpp  Vst3HostWorkerProcessSupport.cpp  Vst3HostWorkerSupport.cpp  Vst3HostedEffect.cpp  Vst3PluginMetadataSupport.cpp  Vst3ProgramDataSupport.cpp  Vst3Scanner.cpp  Vst3StateSupport.cpp  Vst3StreamSupport.cpp  main.cpp
native/example-plugins/Components/plugrelay-example-tonewheel.component/Contents/: Info.plist
native/example-plugins/Components/plugrelay-example-tonewheel.component/Contents/Resources/: PlugRelayPlugin.json
native/example-plugins/Components/soundbridge-example-tonewheel.component/Contents/: Info.plist
native/example-plugins/Components/soundbridge-example-tonewheel.component/Contents/Resources/: SoundBridgePlugin.json
native/example-plugins/LV2/plugrelay-block-profile-gain.lv2/: manifest.ttl  plugrelay-block-profile-gain.ttl
native/example-plugins/LV2/plugrelay-example-gain.lv2/: PlugRelayPlugin.json  manifest.ttl  plugrelay-example-gain.ttl
native/example-plugins/LV2/plugrelay-example-wavefold.lv2/: PlugRelayPlugin.json  manifest.ttl  plugrelay-example-wavefold.ttl
native/example-plugins/LV2/plugrelay-unsupported-option.lv2/: manifest.ttl  plugrelay-unsupported-option.ttl
native/example-plugins/LV2/plugrelay-unsupported-required.lv2/: manifest.ttl  plugrelay-unsupported-required.ttl
native/example-plugins/LV2/soundbridge-block-profile-gain.lv2/: manifest.ttl  soundbridge-block-profile-gain.ttl
native/example-plugins/LV2/soundbridge-example-gain.lv2/: soundbridge-example-gain.ttl
native/example-plugins/LV2/soundbridge-example-wavefold.lv2/: SoundBridgePlugin.json  manifest.ttl  soundbridge-example-wavefold.ttl
native/example-plugins/LV2/soundbridge-unsupported-option.lv2/: manifest.ttl  soundbridge-unsupported-option.ttl
native/example-plugins/LV2/soundbridge-unsupported-required.lv2/: manifest.ttl  soundbridge-unsupported-required.ttl
native/example-plugins/VST3/plugrelay-example-polysynth.vst3/Contents/: Info.plist
native/example-plugins/VST3/plugrelay-example-polysynth.vst3/Contents/Resources/: PlugRelayPlugin.json
native/example-plugins/VST3/soundbridge-example-polysynth.vst3/Contents/: Info.plist
native/example-plugins/VST3/soundbridge-example-polysynth.vst3/Contents/Resources/: SoundBridgePlugin.json
scripts/: binary-audio-frames-smoke.mjs  binary-audio-frames.mjs  browser-demo-engine-control-smoke.mjs  browser-smoke.mjs  check-file-sizes.mjs  daemon-au-host-profiles.mjs  daemon-command-dispatcher.mjs  daemon-config.mjs  daemon-control-events.mjs  daemon-editors.mjs  daemon-file-grant-operations-smoke.mjs  daemon-file-grant-operations.mjs  daemon-file-grants.mjs  daemon-hello-response.mjs  daemon-instance-factory.mjs  daemon-instance-file-grants.mjs  daemon-lifecycle.mjs  daemon-lv2-block-profiles.mjs  daemon-mock-instruments.mjs  daemon-normalizers.mjs  daemon-pairing.mjs  daemon-parameter-commands.mjs  daemon-plugin-catalog-policy-smoke.mjs  daemon-plugin-catalog-policy.mjs  daemon-plugin-catalog.mjs  daemon-render-diagnostics-smoke.mjs  daemon-render-diagnostics.mjs  daemon-request-envelope.mjs  daemon-request-handler.mjs  daemon-runtime-payloads.mjs  daemon-security-helpers.mjs  daemon-vst3-program-data.mjs  daemon-worker-security.mjs  demo-server.mjs  file-grant-approval-broker-fixture.mjs  file-grant-approval-broker-process.mjs  file-grant-approval-broker-smoke.mjs  installed-plugin-probe-errors.mjs  installed-plugin-probe-events.mjs  installed-plugin-probe-file-grants.mjs  (+86 more)
